# platform.core.account.liboauth2

./: CMakeLists.txt  oauth2.files  oauth2.includes  update_sdk_rootstrap.sh
TC/: utc-oauth2.c
doc/: liboauth2_doc.h
include/: oauth2.h  oauth2_error.h  oauth2_manager.h  oauth2_request.h  oauth2_response.h  oauth2_types.h
packaging/: oauth2.spec
sample/oauth2sample/: .cproject  .project  .rds_delta  .sdk_delta.info  README  tizen-manifest.xml
sample/oauth2sample/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
sample/oauth2sample/inc/: main.h
sample/oauth2sample/res/: ui_controls.edc
sample/oauth2sample/src/: main.c  oauth2_handler.c
src/: CMakeLists.txt  oauth2.pc.in  oauth2_error.c  oauth2_manager.c  oauth2_private.h  oauth2_request.c  oauth2_response.c  oauth2_util.c  oauth2_util.h
